<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fourteen_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/digital_house_foods"
            android:background="@color/purple_500"
            android:textSize="@dimen/twentyseven_sp"
            android:textColor="@color/white"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fiftyfour_dp"
            android:layout_marginLeft="@dimen/twentyfour_dp"
            android:layout_marginRight="@dimen/twentyfour_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/tilSenha"
            app:errorEnabled="true"
            app:errorContentDescription="Campo"

            android:hint="@string/mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_dp"
            android:layout_marginTop="67dp"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/tilSenha"
            android:backgroundTint="@color/button_primary_color"
            android:text="@string/login"
            android:textSize="@dimen/twentyone_sp"

                />

        <View
            android:id="@+id/viLineOne"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fiftytwo_dp"
            android:layout_marginRight="@dimen/thirtyone_dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintEnd_toStartOf="@id/tvOr"
            app:layout_constraintTop_toBottomOf="@id/btLogin"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="@dimen/forty_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintStart_toEndOf="@id/viLineOne"
            app:layout_constraintTop_toBottomOf="@id/btLogin" />

        <View
            android:id="@+id/viLineTwo"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/fiftytwo_dp"
            android:layout_marginStart="@dimen/thirtyone_dp"
            android:background="@color/line"
            app:layout_constraintStart_toEndOf="@id/tvOr"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/btLogin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRegistrar"
            android:layout_width="0dp"
            android:layout_height="@dimen/seventy_dp"
            android:layout_marginTop="@dimen/sixtyseven_dp"
            app:layout_constraintStart_toStartOf="@id/tilEmail"
            app:layout_constraintEnd_toEndOf="@id/tilEmail"
            app:layout_constraintTop_toBottomOf="@id/viLineOne"
            android:backgroundTint="@color/button_secondary_color"
            android:text="@string/register"
            android:textSize="@dimen/twentyone_sp"

            />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>